Actualizacion en la sección destacados

--- a/index.html
+++ b/index.html
@@ -166,11 +166,8 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <h3>EL MAESTRO MAS JOVEN</h3>
-                    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta esse quod consequatur quisquam
-                        aliquam et
-                        ullam, veritatis eligendi animi ea a inventore quia architecto molestiae laborum dolores sequi
-                        veniam
-                        facere.</P>
+                    <P>El Tie Break final del Estrella Damm Menorca Master Final 2020 donde Agustin Tapia tras vencer junto a Fernando Belasteguin, se convierte en
+                        el jugador mas jóven de la historia en ganar un Master Final.</P>
                 </div>
 
 
@@ -181,9 +178,11 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <h3>NUMERO 1 DEL PADEL MUNDIAL</h3>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tempore, obcaecati, eaque tenetur
-                        necessitatibus facere inventore corporis adipisci similique consequuntur incidunt quas impedit,
-                        accusamus officia fugit ab porro reprehenderit quos.</P>
+                    <P>La increíble final del torneo Estrella Damm Vigo Open 2023, catalogada como una de las mejores
+                        finales de la historia de este deporte, que enfrenta a Alejando Galan y Juan Lebron, en ese
+                        momento pareja 1 del
+                        circuito, contra Agustin Tapia y Arturo Coello, donde conseguirian estos ultimos destronarlos y
+                        consagrarse como la nueva pareja 1 del mundo.</P>
                 </div>
 
 
@@ -194,10 +193,8 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <h3>DEBUT Y VICTORIA DE COELLO-TAPIA</h3>
-                    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam provident atque delectus hic
-                        voluptate sequi tempora maxime nisi temporibus sed, corrupti harum, debitis iusto in porro
-                        maiores?
-                        Expedita, atque vitae!</P>
+                    <P>Agustin Tapia y Arturo Coello entran a pista por primera vez como pareja y consiguen su primera
+                        victoria en su debut.</P>
                 </div>
             </article>
 
