--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
 
     <header>
-        <h1>AGUSTÍN TAPIA</h1>
+        <div>
+            <h1>AGUSTÍN TAPIA</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
@@ -123,7 +125,10 @@
                 <img src="./img/tapia-messi.png" alt="Foto de Agustin Tapia con messi">
                 <article>
                     <h3>SE CONOCEN LOS NUMERO 1</h3>
-                    <p>Agustin Tapia pudo conocer a su idolo Lionel Messi durante el torneo de miami</p>
+                    <p>El mejor jugador de padel del mundo conoce al mejor jugador de futbol del mundo. Agustin Tapia
+                        pudo conocer a su idolo e icono del futbol mundial Lionel Messi durante un torneo
+                        disputado en miami, donde actualmente reside Lio, la experiencia según agus fue "inolvidable"
+                    </p>
                 </article>
             </div>
 
@@ -132,11 +137,7 @@
                     alt="Foto de Agustin Tapia en la final de bruselas donde quedó subcampeon">
                 <article>
                     <h3>SUBCAMPEONES EN BRUSELAS</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio eveniet dicta soluta magnam culpa
-                        dolor
-                        commodi sed, at accusantium, provident et debitis labore! Eligendi debitis error accusamus
-                        voluptatum,
-                        dolorem sint!</p>
+                    <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un clásico este año y nos regalará muchas alegrías!.</p>
                 </article>
             </div>
 
@@ -145,11 +146,9 @@
                     alt="Foto de Agustin Tapia luego de salir campeon en Puerto Cabello">
                 <article>
                     <h3>CAMPEONES EN PUERTO CABELLO</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet natus dolore consectetur,
-                        perferendis,
-                        sapiente fugit in id sint, deserunt odio deleniti perspiciatis. Similique adipisci quasi odit
-                        quod
-                        minima laboriosam voluptate.</p>
+                    <p>La formula Tapia-Coello logra una victoria increíble en el P2 de Puerto Cabello tras vencer por
+                        2/6-6/3-6/3 a Chingotto-Galan, una nueva pareja que ya en su debut se enfrenta a los número 1
+                        llegando a la final, prometen dar mucha pelea este año.</p>
                 </article>
             </div>
 
@@ -166,7 +165,8 @@
                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
                     <h3>EL MAESTRO MAS JOVEN</h3>
-                    <P>El Tie Break final del Estrella Damm Menorca Master Final 2020 donde Agustin Tapia tras vencer junto a Fernando Belasteguin, se convierte en
+                    <P>El Tie Break final del Estrella Damm Menorca Master Final 2020 donde Agustin Tapia tras vencer
+                        junto a Fernando Belasteguin, se convierte en
                         el jugador mas jóven de la historia en ganar un Master Final.</P>
                 </div>
 
@@ -205,7 +205,10 @@
                     <h3>CANCHA AGUSTIN TAPIA</h3>
                     <p>La cancha de padel ubicada en Catamarca, en el polideportivo municipal 250 que lleva su nombre en
                         honor a la estrella catamarqueña Agustin Tapia, donde cualquiera tiene acceso a jugar en ella de
-                        forma gratuita. </p>
+                        forma gratuita. El mozart ha visitado varias veces el lugar cuando vuelve a su ciudad natal a
+                        fines de temporada, siempre expresando su gratitud y alegría con el gobierno de Catamarca por
+                        tan lindo homenaje. Tambien es un espacio para que los catamarqueños fanaticos del padel y por
+                        supuesto de Agus, se acerquen y puedan conocerlo.</p>
                 </article>
 
                 <iframe
@@ -247,7 +250,7 @@
                 </article>
 
                 <div class="imagen-formulario">
-                    <img class="foto-tapia-final" src="./img/tapia-portada.jpg" alt="">
+                    <img src="./img/agustin-tapia-imagen-contacto.jpeg" alt="">
                 </div>
 
             </form>
