Incorporación de mediaqueries para el responsive de la sección inicio

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
                     alt="Foto de Agustin Tapia en la final de bruselas donde quedó subcampeon">
                 <article>
                     <h3>SUBCAMPEONES EN BRUSELAS</h3>
-                    <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un clásico este año y nos regalará muchas alegrías!.</p>
+                    <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan
+                        que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un
+                        clásico este año y nos regalará muchas alegrías!.</p>
                 </article>
             </div>
 
