Diseño responsive para las secciones INICIO y CONTACTO terminado

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -14,18 +16,87 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/biografia.html">Biografía</a></li>
-                <li><a href="../pages/novedades.html">Novedades</a></li>
-                <li><a href="../pages/destacados.html">Destacados</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a>
+                <li><a href="./biografia.html">Biografía</a></li>
+                <li><a href="./novedades.html">Novedades</a></li>
+                <li><a href="./destacados.html">Destacados</a></li>
+                <li><a href="./contacto.html">Contacto</a>
+
             </ul>
         </nav>
     </header>
 
     <main>
-        <section>
-            <h2>BIOGRAFIA</h2>
+        <section class="biografia-fondo">
+            <h2 class="titulo-biografia">BIOGRAFIA</h2>
+            <article class="biografia-documental">
+                <div class="biografia">
+                    <h3>EL MOZART DE CATAMARCA</h3>
+                    <P> Agustín Tapia nació en San Fernando del Valle de Catamarca, el 24 de julio de 1999. Empieza a
+                        jugar a una temprana edad llevándose una gran cantidad de premios de competiciones que se
+                        realizaban en Argentina. Con 15 años decide separarse de su familia y amigos para cambiarse de
+                        ciudad y mudarse a Rosario para así poder seguir entrenando de forma continua y profesional. Tan
+                        solo dos años después logra quedar el número uno en una de las competiciones más importantes su
+                        país, el circuito profesional de Argentina. Un tiempo después decide seguir creciendo en su
+                        carrera profesional por lo que viaja a España para poder jugar en el World Padel Tour junto
+                        Marcello Jardim y firma mi primer contrato profesional con NOX.
+                        Juntos conseguirían permanecer en muy buenas posiciones, llegando a cuartos por primera vez. Sin
+                        embargo enseguida cambiaría a su pareja, esta vez con Juan Martín Diaz, uno de los mejores
+                        jugadores de todo el World Padel Tour que consiguió mantenerse en el número uno durante 13 años.
+
+                        Sin embargo unos meses después sufre una lesión en la pierna que le impide jugar por cuatro
+                        meses. Al volver, Fernando Belasteguin se convierte en su nueva pareja, aquí logra conseguir
+                        junto a a su compañero el Madrid Master 2019, llevándose así su primer titulo oficial siendo de
+                        los más jóvenes en lograr esto.
+
+                        En 2021, Tapia es nombrado MVP "Most Valuable Player" en el Estrella Damm de las Rozas Open
+                        2021. Otro titulo que se le entrego
+                        fue el Trofeo Elias Estrella al jugador revelación del World Padel Tour ya que el jugador
+                        consiguió en muy poco tiempo posicionarse como uno de los mejores.
+
+                        A principios de 2021 anuncia que su nueva pareja seria Pablo Lima con el que lograría escalar
+                        posiciones en el ranking de parejas del World Padel Tour. Juntos conseguirían títulos como el
+                        Estrella Damm Las Rozas Open 2021 consiguiendo ganar a su antiguo compañero Fernando Belasteguin
+                        y a Sanyo Gutierrez.
+                        Esta no seria su única victoria ya que también conseguirían su última victoria en el Cervezas
+                        Victoria Málaga Open 2021, ganando a dos de los mejores, Paquito Navarro y Martin Di Nenno. Tras
+                        unos muy buenos resultados decide separarse de Lima. Su siguiente pareja seria Sanyo Gutiérrez,
+                        con quien también consiguió muy buenos resultados en su año juntos, terminando pareja número 2
+                        del circuito.
+                        En 2023 decide unirse con Arturo Coello, otro talentoso jugador joven, convirtiendose así en
+                        números 1 del mundo en tan solo medio año de torneos, ganando absolutamente todos los torneos
+                        disputados en ese tiempo.
+                        En la actualidad siguen liderando el ranking como la pareja numero 1 del mundo gracias a su
+                        combinación, ya ha ganado más de 15 torneos y aspiran a terminar otro año en esta posicion.
+
+                        Agustin es conocido en el mundo del pádel como "El Mozart de Catamarca" por su talento innato y
+                        su
+                        estilo de juego elegante y exquisito.
+                    </P>
+                </div>
+
+                <div class="documental">
+                    <iframe src="https://www.youtube.com/embed/ufQl02oWaWI?si=q1FQ7uh6KGrwaa-u"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    </iframe>
+
+                    <h3>Documental de Agustin Tapia hecho por NOX</h3>
+                    <p>El documental que ralizó "NOX" marca lider en padel y también marca que acompañó a Agustin Tapia
+                        en
+                        su emocionante camino hacia el número 1, el mejor jugador de padel del mundo a sus 23 años tras
+                        ganar el torneo de Vigo en una de las finales más apasionantes en la historia de este deporte.
+                    </p>
+                </div>
+            </article>
         </section>
+
+
+
+
+
+
+
     </main>
 </body>
 
