--- a/pages/destacados.html
+++ b/pages/destacados.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -24,7 +26,67 @@
 
     <main>
         <section>
-            <h2>DESTACADOS</h2>
+            <h2 class="titulo-destacados">DESTACADOS</h2>
+            <article class="videos-destacados">
+                <div>
+                    <iframe src="https://www.youtube.com/embed/1P917DZJsCc?si=L-Kb3tnjlXLxGuSl"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>EL MAESTRO MAS JOVEN</h3>
+                    <P>El Tie Break final del Estrella Damm Menorca Master Final 2020 donde Agustin Tapia tras vencer
+                        junto a Fernando Belasteguin, se convierte en
+                        el jugador mas jóven de la historia en ganar un Master Final.</P>
+                </div>
+
+
+                <div>
+                    <iframe src="https://www.youtube.com/embed/npsjHGvmpfk?si=cswDtxYsfgqtIOfu"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>NUMERO 1 DEL PADEL MUNDIAL</h3>
+                    <P>La increíble final del torneo Estrella Damm Vigo Open 2023, catalogada como una de las mejores
+                        finales de la historia de este deporte, que enfrenta a Alejando Galan y Juan Lebron, en ese
+                        momento pareja 1 del
+                        circuito, contra Agustin Tapia y Arturo Coello, donde conseguirian estos ultimos destronarlos y
+                        consagrarse como la nueva pareja 1 del mundo.</P>
+                </div>
+
+
+                <div>
+                    <iframe src="https://www.youtube.com/embed/PmTJ2BdaUqU?si=hYmSV47ss0Gc-m3Z"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                    <h3>DEBUT Y VICTORIA DE COELLO-TAPIA</h3>
+                    <P>Agustin Tapia y Arturo Coello entran a pista por primera vez como pareja y consiguen su primera
+                        victoria en su debut.</P>
+                </div>
+            </article>
+
+            <div class="cancha-agus-tapia">
+
+                <img src="../img/cancha-agustintapia.jpg" alt="Cancha de agustin tapia en CATAMARCA">
+                <article>
+                    <h3>CANCHA AGUSTIN TAPIA</h3>
+                    <p>La cancha de padel ubicada en Catamarca, en el polideportivo municipal 250 que lleva su nombre en
+                        honor a la estrella catamarqueña Agustin Tapia, donde cualquiera tiene acceso a jugar en ella de
+                        forma gratuita. El mozart ha visitado varias veces el lugar cuando vuelve a su ciudad natal a
+                        fines de temporada, siempre expresando su gratitud y alegría con el gobierno de Catamarca por
+                        tan lindo homenaje. Tambien es un espacio para que los catamarqueños fanaticos del padel y por
+                        supuesto de Agus, se acerquen y puedan conocerlo.</p>
+                </article>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14030.048292928219!2d-65.78976429999997!3d-28.46412140000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94242896a7a1392d%3A0x8ef46a2d6bf19a12!2sPolideportivo%20Municipal%20Mario%20%22Kokin%22%20Arag%C3%B3n!5e0!3m2!1ses-419!2sar!4v1715280261190!5m2!1ses-419!2sar"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+            </div>
         </section>
     </main>
 </body>
