--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,19 +17,33 @@
 
 <body>
 
-    <header>
-        <div>
-            <h1>AGUSTÍN TAPIA</h1>
+    <header class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand">AGUSTIN TAPIA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/biografia.html">Biografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/novedades.html">Novedades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./pages/destacados.html">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./pages/contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/biografia.html">Biografía</a></li>
-                <li><a href="./pages/novedades.html">Novedades</a></li>
-                <li><a href="./pages/destacados.html">Destacados</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
     </header>
 
     <main>
@@ -35,7 +52,8 @@
             <div class="imagen-portada">
                 <img src="./img/tapia-portada-nueva.jpg" alt="portada-sitio-web">
             </div>
-            <article>
+
+            <article class="contenedor-info-portada">
 
                 <div class="titulo-portada">
                     <h2>CONOCE AL GENIO DEL PADEL MUNDIAL</h2>
@@ -44,7 +62,8 @@
                     <p>
                         -Bienvenidos al sitio web de Agustin Tapia, el MOZART del padel mundial. Aquí podrán conocer
                         tanto la
-                        historia de su carrera deportiva como las últimas novedades sobre la misma. Conozcan al genio de
+                        historia de su carrera deportiva como las últimas novedades sobre la misma. Conozcan al
+                        genio de
                         Catamarca, su vida y lo que ha significado el padel en ella.
                     </p>
                 </div>
@@ -52,225 +71,34 @@
             </article>
 
         </section>
-
-        <section class="biografia-fondo">
-            <h2 class="titulo-biografia">BIOGRAFIA</h2>
-            <article class="biografia-documental">
-                <div class="biografia">
-                    <h3>EL MOZART DE CATAMARCA</h3>
-                    <P> Agustín Tapia nació en San Fernando del Valle de Catamarca, el 24 de julio de 1999. Empieza a
-                        jugar a una temprana edad llevándose una gran cantidad de premios de competiciones que se
-                        realizaban en Argentina. Con 15 años decide separarse de su familia y amigos para cambiarse de
-                        ciudad y mudarse a Rosario para así poder seguir entrenando de forma continua y profesional. Tan
-                        solo dos años después logra quedar el número uno en una de las competiciones más importantes su
-                        país, el circuito profesional de Argentina. Un tiempo después decide seguir creciendo en su
-                        carrera profesional por lo que viaja a España para poder jugar en el World Padel Tour junto
-                        Marcello Jardim y firma mi primer contrato profesional con NOX.
-                        Juntos conseguirían permanecer en muy buenas posiciones, llegando a cuartos por primera vez. Sin
-                        embargo enseguida cambiaría a su pareja, esta vez con Juan Martín Diaz, uno de los mejores
-                        jugadores de todo el World Padel Tour que consiguió mantenerse en el número uno durante 13 años.
-
-                        Sin embargo unos meses después sufre una lesión en la pierna que le impide jugar por cuatro
-                        meses. Al volver, Fernando Belasteguin se convierte en su nueva pareja, aquí logra conseguir
-                        junto a a su compañero el Madrid Master 2019, llevándose así su primer titulo oficial siendo de
-                        los más jóvenes en lograr esto.
-
-                        En 2021, Tapia es nombrado MVP "Most Valuable Player" en el Estrella Damm de las Rozas Open
-                        2021. Otro titulo que se le entrego
-                        fue el Trofeo Elias Estrella al jugador revelación del World Padel Tour ya que el jugador
-                        consiguió en muy poco tiempo posicionarse como uno de los mejores.
-
-                        A principios de 2021 anuncia que su nueva pareja seria Pablo Lima con el que lograría escalar
-                        posiciones en el ranking de parejas del World Padel Tour. Juntos conseguirían títulos como el
-                        Estrella Damm Las Rozas Open 2021 consiguiendo ganar a su antiguo compañero Fernando Belasteguin
-                        y a Sanyo Gutierrez.
-                        Esta no seria su única victoria ya que también conseguirían su última victoria en el Cervezas
-                        Victoria Málaga Open 2021, ganando a dos de los mejores, Paquito Navarro y Martin Di Nenno. Tras
-                        unos muy buenos resultados decide separarse de Lima. Su siguiente pareja seria Sanyo Gutiérrez,
-                        con quien también consiguió muy buenos resultados en su año juntos, terminando pareja número 2
-                        del circuito.
-                        En 2023 decide unirse con Arturo Coello, otro talentoso jugador joven, convirtiendose así en
-                        números 1 del mundo en tan solo medio año de torneos, ganando absolutamente todos los torneos
-                        disputados en ese tiempo.
-                        En la actualidad siguen liderando el ranking como la pareja numero 1 del mundo gracias a su
-                        combinación, ya ha ganado más de 15 torneos y aspiran a terminar otro año en esta posicion.
-
-                        Agustin es conocido en el mundo del pádel como "El Mozart de Catamarca" por su talento innato y
-                        su
-                        estilo de juego elegante y exquisito.
-                    </P>
-                </div>
-
-                <div class="documental">
-                    <iframe src="https://www.youtube.com/embed/ufQl02oWaWI?si=q1FQ7uh6KGrwaa-u"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                    </iframe>
-
-                    <h3>Documental de Agustin Tapia hecho por NOX</h3>
-                    <p>El documental que ralizó "NOX" marca lider en padel y también marca que acompañó a Agustin Tapia
-                        en
-                        su emocionante camino hacia el número 1, el mejor jugador de padel del mundo a sus 23 años tras
-                        ganar el torneo de Vigo en una de las finales más apasionantes en la historia de este deporte.
-                    </p>
-                </div>
-            </article>
-        </section>
-
-        <section>
-            <H2 class="titulo-novedades">NOVEDADES</H2>
-
-            <div class="tapia-messi">
-                <img src="./img/tapia-messi.png" alt="Foto de Agustin Tapia con messi">
-                <article>
-                    <h3>SE CONOCEN LOS NUMERO 1</h3>
-                    <p>El mejor jugador de padel del mundo conoce al mejor jugador de futbol del mundo. Agustin Tapia
-                        pudo conocer a su idolo e icono del futbol mundial Lionel Messi durante un torneo
-                        disputado en miami, donde actualmente reside Lio, la experiencia según agus fue "inolvidable"
-                    </p>
-                </article>
-            </div>
-
-            <div class="tapia-subcampeon">
-                <img src="./img/subcampeones-novedades.png"
-                    alt="Foto de Agustin Tapia en la final de bruselas donde quedó subcampeon">
-                <article>
-                    <h3>SUBCAMPEONES EN BRUSELAS</h3>
-                    <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan
-                        que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un
-                        clásico este año y nos regalará muchas alegrías!.</p>
-                </article>
-            </div>
-
-            <div class="tapia-campeon">
-                <img src="./img/campeones-novedades.png"
-                    alt="Foto de Agustin Tapia luego de salir campeon en Puerto Cabello">
-                <article>
-                    <h3>CAMPEONES EN PUERTO CABELLO</h3>
-                    <p>La formula Tapia-Coello logra una victoria increíble en el P2 de Puerto Cabello tras vencer por
-                        2/6-6/3-6/3 a Chingotto-Galan, una nueva pareja que ya en su debut se enfrenta a los número 1
-                        llegando a la final, prometen dar mucha pelea este año.</p>
-                </article>
-            </div>
-
-
-        </section>
-
-        <section>
-            <h2 class="titulo-destacados">DESTACADOS</h2>
-            <article class="videos-destacados">
-                <div>
-                    <iframe src="https://www.youtube.com/embed/1P917DZJsCc?si=L-Kb3tnjlXLxGuSl"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-                    <h3>EL MAESTRO MAS JOVEN</h3>
-                    <P>El Tie Break final del Estrella Damm Menorca Master Final 2020 donde Agustin Tapia tras vencer
-                        junto a Fernando Belasteguin, se convierte en
-                        el jugador mas jóven de la historia en ganar un Master Final.</P>
-                </div>
-
-
-                <div>
-                    <iframe src="https://www.youtube.com/embed/npsjHGvmpfk?si=cswDtxYsfgqtIOfu"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-                    <h3>NUMERO 1 DEL PADEL MUNDIAL</h3>
-                    <P>La increíble final del torneo Estrella Damm Vigo Open 2023, catalogada como una de las mejores
-                        finales de la historia de este deporte, que enfrenta a Alejando Galan y Juan Lebron, en ese
-                        momento pareja 1 del
-                        circuito, contra Agustin Tapia y Arturo Coello, donde conseguirian estos ultimos destronarlos y
-                        consagrarse como la nueva pareja 1 del mundo.</P>
-                </div>
-
-
-                <div>
-                    <iframe src="https://www.youtube.com/embed/PmTJ2BdaUqU?si=hYmSV47ss0Gc-m3Z"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-                    <h3>DEBUT Y VICTORIA DE COELLO-TAPIA</h3>
-                    <P>Agustin Tapia y Arturo Coello entran a pista por primera vez como pareja y consiguen su primera
-                        victoria en su debut.</P>
-                </div>
-            </article>
-
-            <div class="cancha-agus-tapia">
-
-                <img src="./img/cancha-agustintapia.jpg" alt="Cancha de agustin tapia en CATAMARCA">
-                <article>
-                    <h3>CANCHA AGUSTIN TAPIA</h3>
-                    <p>La cancha de padel ubicada en Catamarca, en el polideportivo municipal 250 que lleva su nombre en
-                        honor a la estrella catamarqueña Agustin Tapia, donde cualquiera tiene acceso a jugar en ella de
-                        forma gratuita. El mozart ha visitado varias veces el lugar cuando vuelve a su ciudad natal a
-                        fines de temporada, siempre expresando su gratitud y alegría con el gobierno de Catamarca por
-                        tan lindo homenaje. Tambien es un espacio para que los catamarqueños fanaticos del padel y por
-                        supuesto de Agus, se acerquen y puedan conocerlo.</p>
-                </article>
-
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14030.048292928219!2d-65.78976429999997!3d-28.46412140000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94242896a7a1392d%3A0x8ef46a2d6bf19a12!2sPolideportivo%20Municipal%20Mario%20%22Kokin%22%20Arag%C3%B3n!5e0!3m2!1ses-419!2sar!4v1715280261190!5m2!1ses-419!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-            </div>
-        </section>
-
-        <section>
-
-            <h2 class="titulo-contacto">CONTACTO</h2>
-            <form class="formulario-contenedor" action="">
-
-                <article class="formulario">
-                    <div>
-                        <label for="nombre">Nombre:</label>
-                        <input type="text" id="nombre">
-                    </div>
-
-                    <div>
-                        <label for="apellido">Apellido:</label>
-                        <input type="text" id="apellido">
-                    </div>
-
-                    <div>
-                        <label for="correo">Correo:</label>
-                        <input type="email" id="correo" placeholder="Ejemplo: correo@gmail.com">
-                    </div>
-
-                    <div>
-                        <label for="mensaje">Mensaje:</label>
-                        <textarea name="" id="mensaje"></textarea>
-                    </div>
-
-                    <input type="submit" value="ENVIAR">
-                    <p>¡DEJA UN MENSAJE PARA EL MOZART!</p>
-                </article>
-
-                <div class="imagen-formulario">
-                    <img src="./img/agustin-tapia-imagen-contacto.jpeg" alt="">
-                </div>
-
-            </form>
-
-
-
-        </section>
-
     </main>
 
-    <footer>
-        <div class="caja-footer">
-            <h3>REDES SOCIALES</h3>
-        </div>
+    <footer class="footer text-white p-4">
+
+        <div class="contenedor-footer">
+
+            <div class="d-flex flex-column align-items-center my-2">
+                <p>
+                    Copyright Giuliano Martinotti @giulanitto2@gmail.com
+                </p>
+            </div>
+
+            <div class="d-flex flex-column align-items-center">
+                <h3>¡Las Redes del mozart!</h3>
+                <div class="fs-1">
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-tiktok"></i>
+                    <i class="bi bi-twitter"></i>
+                </div>
+            </div>
 
 
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
