--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,29 +4,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <h1>AGUSTIN TAPIA</h1>
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/biografia.html">Biografía</a></li>
-                <li><a href="../pages/novedades.html">Novedades</a></li>
-                <li><a href="../pages/destacados.html">Destacados</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></Li>
-            </ul>
-        </nav>
+    <header class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand">AGUSTIN TAPIA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./biografia.html">Biografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./novedades.html">Novedades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./destacados.html">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <section>
-            <h2>CONTACTO</h2>
-        </section>
+        <h2 class="titulo-contacto">CONTACTO</h2>
+        <form class="formulario-contenedor" action="">
+            <div class="formulario">
+                <div class="grupo-formulario">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" id="nombre" class="form-input">
+                </div>
+
+                <div>
+                    <label for="apellido" class="form-label">Apellido:</label>
+                    <input type="text" id="apellido" class="form-input">
+                </div>
+
+                <div>
+                    <label for="correo" class="form-label">Correo:</label>
+                    <input type="email" id="correo" class="form-input" placeholder="Ejemplo: correo@gmail.com">
+                </div>
+
+                <div>
+                    <label for="mensaje" class="form-label">Mensaje:</label>
+                    <textarea name="" id="mensaje" class="textarea"></textarea>
+                </div>
+
+                <input type="submit" class="form-submit" value="ENVIAR">
+                <p>¡DEJA UN MENSAJE PARA EL MOZART!</p>
+            </div>
+
+            <div class="imagen-contacto">
+                <img src="../img/agustin-tapia-imagen-contacto.jpeg" alt="">
+            </div>
+
+        </form>
+
+
     </main>
+
+
+    <footer class="footer text-white p-4">
+
+        <div class="contenedor-footer">
+
+            <div class="d-flex flex-column align-items-center my-2">
+                <p>
+                    Copyright Giuliano Martinotti @giulanitto2@gmail.com
+                </p>
+            </div>
+
+            <div class="d-flex flex-column align-items-center">
+                <h3>¡Las Redes del mozart!</h3>
+                <div class="fs-1">
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-tiktok"></i>
+                    <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
