--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -23,8 +25,45 @@
 
     <main>
         <section>
-            <h2>NOVEDADES</h2>
+            <H2 class="titulo-novedades">NOVEDADES</H2>
+
+            <div class="tapia-messi">
+                <img src="../img/tapia-messi.png" alt="Foto de Agustin Tapia con messi">
+                <article>
+                    <h3>SE CONOCEN LOS NUMERO 1</h3>
+                    <p>El mejor jugador de padel del mundo conoce al mejor jugador de futbol del mundo. Agustin Tapia
+                        pudo conocer a su idolo e icono del futbol mundial Lionel Messi durante un torneo
+                        disputado en miami, donde actualmente reside Lio, la experiencia según agus fue "inolvidable"
+                    </p>
+                </article>
+            </div>
+
+            <div class="tapia-subcampeon">
+                <img src="../img/subcampeones-novedades.png"
+                    alt="Foto de Agustin Tapia en la final de bruselas donde quedó subcampeon">
+                <article>
+                    <h3>SUBCAMPEONES EN BRUSELAS</h3>
+                    <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan
+                        que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un
+                        clásico este año y nos regalará muchas alegrías!.</p>
+                </article>
+            </div>
+
+            <div class="tapia-campeon">
+                <img src="../img/campeones-novedades.png"
+                    alt="Foto de Agustin Tapia luego de salir campeon en Puerto Cabello">
+                <article>
+                    <h3>CAMPEONES EN PUERTO CABELLO</h3>
+                    <p>La formula Tapia-Coello logra una victoria increíble en el P2 de Puerto Cabello tras vencer por
+                        2/6-6/3-6/3 a Chingotto-Galan, una nueva pareja que ya en su debut se enfrenta a los número 1
+                        llegando a la final, prometen dar mucha pelea este año.</p>
+                </article>
+            </div>
+
+
         </section>
+
+
     </main>
 </body>
 
