pequeñas correcciones al footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,7 +86,7 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti @giulanitto2@gmail.com
+                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
                 </p>
             </div>
 
