--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti @giulanitto2@gmail.com
+                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
                 </p>
             </div>
 
