--- a/pages/destacados.html
+++ b/pages/destacados.html
@@ -4,24 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <header>
-        <h1>AGUSTIN TAPIA</h1>
-
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/biografia.html">Biografia</a></li>
-                <li><a href="../pages/novedades.html">Novedades</a></li>
-                <li><a href="../pages/destacados.html">Destacados</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+    <header class="navbar navbar-expand-lg  bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand">AGUSTIN TAPIA</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <nav class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./biografia.html">Biografía</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./novedades.html">Novedades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./destacados.html">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-disabled="true" href="./contacto.html">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -70,8 +88,11 @@
 
             <div class="cancha-agus-tapia">
 
-                <img src="../img/cancha-agustintapia.jpg" alt="Cancha de agustin tapia en CATAMARCA">
-                <article>
+                <div>
+                    <img src="../img/cancha-agustintapia.jpg" alt="Cancha de agustin tapia en CATAMARCA">
+                </div>
+
+                <article class="cancha-historia">
                     <h3>CANCHA AGUSTIN TAPIA</h3>
                     <p>La cancha de padel ubicada en Catamarca, en el polideportivo municipal 250 que lleva su nombre en
                         honor a la estrella catamarqueña Agustin Tapia, donde cualquiera tiene acceso a jugar en ella de
@@ -81,14 +102,47 @@
                         supuesto de Agus, se acerquen y puedan conocerlo.</p>
                 </article>
 
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14030.048292928219!2d-65.78976429999997!3d-28.46412140000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94242896a7a1392d%3A0x8ef46a2d6bf19a12!2sPolideportivo%20Municipal%20Mario%20%22Kokin%22%20Arag%C3%B3n!5e0!3m2!1ses-419!2sar!4v1715280261190!5m2!1ses-419!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+                <div>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14030.048292928219!2d-65.78976429999997!3d-28.46412140000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94242896a7a1392d%3A0x8ef46a2d6bf19a12!2sPolideportivo%20Municipal%20Mario%20%22Kokin%22%20Arag%C3%B3n!5e0!3m2!1ses-419!2sar!4v1715280261190!5m2!1ses-419!2sar"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
 
             </div>
         </section>
     </main>
+
+
+    <footer class="footer text-white p-4">
+
+        <div class="contenedor-footer">
+
+            <div class="d-flex flex-column align-items-center my-2">
+                <p>
+                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
+                </p>
+            </div>
+
+            <div class="d-flex flex-column align-items-center">
+                <h3>¡Las Redes del mozart!</h3>
+                <div class="fs-1">
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-tiktok"></i>
+                    <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+
+
+    </footer>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
