--- a/index.html
+++ b/index.html
@@ -48,27 +48,19 @@
 
     <main>
 
-        <section>
-            <div class="imagen-portada">
-                <img src="./img/tapia-portada-nueva.jpg" alt="portada-sitio-web">
+        <section class="portada">
+            <div class="animation-index">
+                <h2>CONOCE AL GENIO DEL PADEL MUNDIAL</h2>
             </div>
-
-            <article class="contenedor-info-portada">
-
-                <div class="titulo-portada">
-                    <h2>CONOCE AL GENIO DEL PADEL MUNDIAL</h2>
-                </div>
-                <div class="introduccion">
-                    <p>
-                        -Bienvenidos al sitio web de Agustin Tapia, el MOZART del padel mundial. Aquí podrán conocer
-                        tanto la
-                        historia de su carrera deportiva como las últimas novedades sobre la misma. Conozcan al
-                        genio de
-                        Catamarca, su vida y lo que ha significado el padel en ella.
-                    </p>
-                </div>
-
-            </article>
+            <div class="animation-index-2">
+                <p>
+                    Bienvenidos al sitio web de Agustin Tapia, el MOZART del padel mundial. Aquí podrán conocer
+                    tanto la
+                    historia de su carrera deportiva como las últimas novedades sobre la misma. Conozcan al
+                    genio de
+                    Catamarca, su vida y lo que ha significado el padel en ella.
+                </p>
+            </div>
 
         </section>
     </main>
@@ -79,16 +71,19 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
+                    Giuliano Martinotti 2024, Todos los derechos reservados
                 </p>
             </div>
 
             <div class="d-flex flex-column align-items-center">
                 <h3>¡Las Redes del mozart!</h3>
                 <div class="fs-1">
-                    <i class="bi bi-instagram"></i>
-                    <i class="bi bi-tiktok"></i>
-                    <i class="bi bi-twitter"></i>
+                    <a href="https://www.instagram.com/agustin.tapia2/"><i
+                            class="bi bi-instagram link-light link-opacity-75-hover"></i></a>
+                    <a href="https://www.tiktok.com/@agustin.tapia2?lang=es"><i
+                            class="bi bi-tiktok link-light link-opacity-75-hover"></i></a>
+                    <a href="https://x.com/agustapiacarp"><i
+                            class="bi bi-twitter link-light link-opacity-75-hover"></i></a>
                 </div>
             </div>
 
