--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -52,7 +52,7 @@
                     <h3>SE CONOCEN LOS NUMERO 1</h3>
                     <p>El mejor jugador de padel del mundo conoce al mejor jugador de futbol del mundo. Agustin Tapia
                         pudo conocer a su idolo e icono del futbol mundial Lionel Messi durante un torneo
-                        disputado en miami, donde actualmente reside Lio, la experiencia según agus fue "inolvidable"
+                        disputado en miami, donde actualmente reside Lio, la experiencia según agus fue "inolvidable".
                     </p>
                 </article>
             </div>
@@ -64,7 +64,8 @@
                     <h3>SUBCAMPEONES EN BRUSELAS</h3>
                     <p>Agus y Arturo caen en la final por segunda vez este año tras ser derrotados por Chingotto-Galan
                         que dieron un espectaculo enorme para poder ganarles, este enfrentamiento sin dudas será un
-                        clásico este año y nos regalará muchas alegrías!.</p>
+                        clásico este año y nos regalará muchas alegrías!.
+                    </p>
                 </article>
             </div>
 
@@ -75,7 +76,8 @@
                     <h3>CAMPEONES EN PUERTO CABELLO</h3>
                     <p>La formula Tapia-Coello logra una victoria increíble en el P2 de Puerto Cabello tras vencer por
                         2/6-6/3-6/3 a Chingotto-Galan, una nueva pareja que ya en su debut se enfrenta a los número 1
-                        llegando a la final, prometen dar mucha pelea este año.</p>
+                        llegando a la final, prometen dar mucha pelea este año.
+                    </p>
                 </article>
             </div>
 
@@ -92,16 +94,19 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
+                    Giuliano Martinotti 2024, Todos los derechos reservados
                 </p>
             </div>
 
             <div class="d-flex flex-column align-items-center">
                 <h3>¡Las Redes del mozart!</h3>
                 <div class="fs-1">
-                    <i class="bi bi-instagram"></i>
-                    <i class="bi bi-tiktok"></i>
-                    <i class="bi bi-twitter"></i>
+                    <a href="https://www.instagram.com/agustin.tapia2/"><i
+                            class="bi bi-instagram link-light link-opacity-75-hover"></i></a>
+                    <a href="https://www.tiktok.com/@agustin.tapia2?lang=es"><i
+                            class="bi bi-tiktok link-light link-opacity-75-hover"></i></a>
+                    <a href="https://x.com/agustapiacarp"><i
+                            class="bi bi-twitter link-light link-opacity-75-hover"></i></a>
                 </div>
             </div>
 
@@ -113,6 +118,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
