--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="./novedades.html">Novedades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  aria-disabled="true" href="./destacados.html">Destacados</a>
+                        <a class="nav-link" aria-disabled="true" href="./destacados.html">Destacados</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-disabled="true" href="./contacto.html">Contacto</a>
@@ -115,16 +115,19 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
+                    Giuliano Martinotti 2024, Todos los derechos reservados
                 </p>
             </div>
 
             <div class="d-flex flex-column align-items-center">
                 <h3>¡Las Redes del mozart!</h3>
                 <div class="fs-1">
-                    <i class="bi bi-instagram"></i>
-                    <i class="bi bi-tiktok"></i>
-                    <i class="bi bi-twitter"></i>
+                    <a href="https://www.instagram.com/agustin.tapia2/"><i
+                            class="bi bi-instagram link-light link-opacity-75-hover"></i></a>
+                    <a href="https://www.tiktok.com/@agustin.tapia2?lang=es"><i
+                            class="bi bi-tiktok link-light link-opacity-75-hover"></i></a>
+                    <a href="https://x.com/agustapiacarp"><i
+                            class="bi bi-twitter link-light link-opacity-75-hover"></i></a>
                 </div>
             </div>
 
@@ -132,7 +135,7 @@
     </footer>
 
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
