--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,16 +86,19 @@
 
             <div class="d-flex flex-column align-items-center my-2">
                 <p>
-                    Copyright Giuliano Martinotti "giulanitto2@gmail.com"
+                    Giuliano Martinotti 2024, Todos los derechos reservados
                 </p>
             </div>
 
             <div class="d-flex flex-column align-items-center">
                 <h3>¡Las Redes del mozart!</h3>
                 <div class="fs-1">
-                    <i class="bi bi-instagram"></i>
-                    <i class="bi bi-tiktok"></i>
-                    <i class="bi bi-twitter"></i>
+                    <a href="https://www.instagram.com/agustin.tapia2/"><i
+                            class="bi bi-instagram link-light link-opacity-75-hover"></i></a>
+                    <a href="https://www.tiktok.com/@agustin.tapia2?lang=es"><i
+                            class="bi bi-tiktok link-light link-opacity-75-hover"></i></a>
+                    <a href="https://x.com/agustapiacarp"><i
+                            class="bi bi-twitter link-light link-opacity-75-hover"></i></a>
                 </div>
             </div>
 
